home page alignment fixes

--- a/newamericadotorg/assets/scss/base/_type.scss
+++ b/newamericadotorg/assets/scss/base/_type.scss
@@ -99,6 +99,10 @@ p {
   &.gray{
     color: color(gray, dark);
   }
+
+  &.centered{
+    text-align: center;
+  }
 }
 
 .subheading, [class*="subheading--"] {
